[gd_scene load_steps=14 format=2]

[ext_resource path="res://Torreta/tanks_turret2.png" type="Texture" id=1]
[ext_resource path="res://Torreta/tanks_tankGrey_body3.png" type="Texture" id=2]
[ext_resource path="res://Seeker.gd" type="Script" id=3]
[ext_resource path="res://SFX/laserfire02.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/explosion_dull.ogg" type="AudioStream" id=5]
[ext_resource path="res://Torreta/tank_explosion4.png" type="Texture" id=6]
[ext_resource path="res://Torreta/tank_explosion2.png" type="Texture" id=7]
[ext_resource path="res://Torreta/tank_explosion3.png" type="Texture" id=8]
[ext_resource path="res://SFX/8bit_bomb_explosion.wav" type="AudioStream" id=9]
[ext_resource path="res://hurtr.tres" type="Animation" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.6234, 24.9095 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), null ],
"loop": false,
"name": "death",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44.7426, 30.7612 )

[node name="Seeker" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Canon" type="Sprite" parent="."]
position = Vector2( -0.0269775, -9.505 )
rotation = -1.5708
texture = ExtResource( 1 )
offset = Vector2( 21.3039, 0.0269785 )

[node name="Spawner" type="Position2D" parent="Canon"]
position = Vector2( 45, 0 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
playback_speed = 6.0
anims/hurt = ExtResource( 10 )
anims/hurtr = ExtResource( 10 )

[node name="Reference" type="Sprite" parent="."]
visible = false
position = Vector2( -0.0269775, -9.505 )
rotation = -1.5708
texture = ExtResource( 1 )
offset = Vector2( 21.3039, 0.0269785 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Laser" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 1000.0
attenuation = 0.594603

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 1000.0
attenuation = 0.5

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -4.0
max_distance = 1000.0
attenuation = 0.466516
__meta__ = {
"_editor_description_": ""
}

[node name="Timer2" type="Timer" parent="."]

[node name="Delay" type="Timer" parent="."]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
